<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:contentDescription="@string/textDescription"
    android:textAlignment="textEnd"
    tools:context=".Activities.AssetDetails">

    <TextView
        android:id="@+id/assetNameTextView"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="Fancy Asset Here!"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backToMainActivityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backToMainActivityButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backToMainActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/textDescription"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assetNameTextView" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/textType"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <TextView
        android:id="@+id/warranty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/textWarranty"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <TextView
        android:id="@+id/placementTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Placement"
        android:padding="10dp"
        android:text="@string/textPlacement"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warrantyTextView" />

    <TextView
        android:id="@+id/purchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/textPurchased"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTextView" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Some hint"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Dummy Category"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeTextView" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="1-12-2020"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchased" />

    <TextView
        android:id="@+id/warrantyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="10 Years"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warranty" />

    <TextView
        android:id="@+id/row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/textRow"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placementTextView" />

    <TextView
        android:id="@+id/rowTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:hint="5"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/row"
        app:layout_constraintStart_toEndOf="@+id/row"
        app:layout_constraintTop_toBottomOf="@+id/placementTextView" />

    <TextView
        android:id="@+id/column"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/textColumn"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/rowTextView"
        app:layout_constraintTop_toBottomOf="@+id/placementTextView" />

    <TextView
        android:id="@+id/columnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="2"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintStart_toEndOf="@+id/column"
        app:layout_constraintTop_toBottomOf="@+id/placementTextView" />

    <ImageButton
        android:id="@+id/deleteAssetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>